# fappa

./: .gitignore  .gitmodules  Cargo.toml
specs/: fappa-v1.bash  sigrok.sh  sigrok.toml
src/: build.Dockerfile.hbs  build.rs  errors.rs  fetch_images.rs  git.rs  lib.rs  main.rs  namespace.rs  prepare-image.Dockerfile.hbs  spec_sh.rs  specs.rs  unpack.rs  user.Dockerfile.hbs
src/namespace/: child.rs  id_map.rs
