[package]
name = "fappa"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

edition = "2018"

[dependencies]
async-fetcher = "0.1"
clap = "2.32"
failure = "0.1"
fs_extra = "1"
futures = "0.1"
git2 = "0.8"
nix = "0.12"
os_pipe = "0.8"
psutil = "1"
rand = "0.6"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
tar = "0.4"
tempfile = "3"
tokio = "0.1"
toml = "0.4"
url = "1"
walkdir = "2"
void = "1"

[dependencies.flate2]
default-features = false
features = ["rust_backend"]
version = "1"
